--- a/meow.html
+++ b/meow.html
@@ -125,7 +125,7 @@
     <tr> 
      <td align="center"><br><br><br><br><br><br><br><br> 
       <script type="text/javascript">
-        var message="Hacked By Seri.sys";
+        var message="Hacked By A Retard";
         function clickIE() {if (document.all) {(message);return false;}}
         function clickNS(e) {if
         (document.layers||(document.getElementById&&!document.all)) {
